--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "next": "^14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
