--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "next": "^14.1.3",
+    "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^2.2.1",
