--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "next": "^14.1.3",
