--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start",
-    "db-seed": "NODE_ENV=development prisma db seed"
+    "start": "next start"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -35,6 +34,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.1.4",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
